# poker-engine

./: pyproject.toml
game/: Engine.py  Player.py
tests/: engine_test.py  player_test.py
