[tool.poetry]
name = "poker-engine"
version = "0.1.0"
description = ""
authors = ["J-Coke <1jamescoker1@gmail.com>"]
readme = "README.md"
packages = [{include = "poker_engine"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
pytest-watch = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
